--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.13.3",
     "@vidstack/react": "^1.12.12",
     "emoji-mart": "^5.6.0",
+    "luxon": "^3.5.0",
     "next": "15.0.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -23,6 +24,7 @@
     "react-truncate-markup": "^5.1.2"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
