--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-truncate-markup": "^5.1.2"
+    "react-truncate-markup": "^5.1.2",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/luxon": "^3.4.2",
